# vbap

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml
docs/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  group__vbap.html  group__vbapd.html  group__vbapf.html  index.html  modules.html  pages.html  struct__vbapf.html  todo.html  vbap_8h_source.html
docs/search/: all_0.js  all_1.js  all_2.js  functions_0.js  groups_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js
pd/: CMakeLists.txt  README.md
pd.abs/: p.vbap-help.pd  p.vbap.pd  vbap.2d-help.pd  vbap.2d.pd  vbap.3d-help.pd  vbap.3d.pd  vbap.3d.tri.pd
pd.abs/2d/: gain.scale.pd  mat.inv.pd  mat.vec.mul.pd  out.set.get.pd  perform.pd  pol.to.car.pd  prepare.pd
pd.abs/3d/: dist.euclidean.pd  dist.great.circle.pd  gain.scale.pd  loop.nls.pd  mat.inv-test.pd  mat.inv.pd  mat.vec.mul.pd  perform.pd  pol.to.car.pd  prepare.pd
pd.abs/misc/: color.ls~.pd  vu.meter~.pd
pd.abs/shared/: get.angles.pd  has.arg.sym.pd
pd/abs/: p.mdap-help.pd  p.mdap.pd  p.vbap-help.pd  p.vbap.pd
pd/abs/2d/: additive.pd  perform.pd  prepare.pd  spread.pd
pd/abs/3d/: perform.pd  prepare.pd  spread.pd  virtual.pd
pd/ext/: vbap-help.pd  vbap.coeff-help.pd  vbap~-help.pd
pd/src/: vbap_coeff.c  vbap_load.c  vbap_tilde.c
references/: README.md
src/: vbap.c  vbap.h  vbap.hpp
tests/: test.c  test.cpp  test_2d.c
